put data in factory

--- a/partials/inProgress.html
+++ b/partials/inProgress.html
@@ -1,5 +1,5 @@
         <div class="container">
-        	<h1>Angularjs Table</h1>
+        	<h1>In Progress View</h1>
         	<div class="table-responsive">
         		<ul class="pagination pagination-sm">
         			<li class="disabled"><a href="#">&laquo;</a></li>
